src/main/webapp/css/imcms-info-page.css
.imcms-info-page {
    background-color: #f3f5f7;
    -webkit-box-shadow: 0 0 29px 13px rgba(0, 0, 0, 0.07);
    -moz-box-shadow: 0 0 29px 13px rgba(0, 0, 0, 0.07);
    box-shadow: 0 0 29px 13px rgba(0, 0, 0, 0.07);
    display: block;
    margin-left: -320px;
    overflow: hidden;
    position: fixed;
    width: 640px;
    top: 100px;
    left: 50%;
    z-index: 10005;
}

.imcms-info-head {
    background-color: #389ecf;
    text-align: center;
    display: block;
    position: relative;
    width: 100%;
    height: 42px;
}

.imcms-info__logo, .imcms-head__logo {
    background: url(../images_new/icon_logo_main.png) no-repeat 0 0;
    background-size: contain;
    text-indent: -99999px;
    display: block;
    position: absolute;
    top: 4px;
    left: 20px;
    height: 100%;
    width: 69px;
}

.imcms-info-body {
    display: block;
    padding: 20px 20px 0;
    width: 100%;
}

.imcms-info-body__button {
    display: inline-block;
    margin-right: 10px;
}

.imcms-info-footer {
    text-align: center;
    display: block;
    padding: 20px;
    width: 100%;
}

.imcms-info-footer__button {
    display: inline-block;
    margin: 0 10px;
}

